fixed width issue on mobile

--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -35,7 +35,6 @@
 
 .column-left,
 .column-right {
-  width: 100%;
 
   @media (min-width: $brk-large) {
      width: 45%;
